--- a/app/src/main/res/layout/activity_inside_event.xml
+++ b/app/src/main/res/layout/activity_inside_event.xml
@@ -12,19 +12,36 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:text="Event Details"
-            android:textColor="@color/bluetext"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="28dp">
+
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="10dp"
+                android:alpha="1"
+                android:background="@drawable/bg_back_btn"
+                android:src="@drawable/back_arrow"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Event Details"
+                android:textColor="@color/bluetext"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,8 +57,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="3dp"
                 android:layout_weight="1"
-                android:scaleType="centerCrop"
-                 />
+                android:scaleType="centerCrop" />
 
             <ImageView
                 android:id="@+id/image2"
@@ -50,8 +66,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="3dp"
                 android:layout_weight="1"
-                android:scaleType="centerCrop"
-                 />
+                android:scaleType="centerCrop" />
 
             <ImageView
                 android:id="@+id/image3"
@@ -60,8 +75,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="3dp"
                 android:layout_weight="1"
-                android:scaleType="centerCrop"
-                 />
+                android:scaleType="centerCrop" />
 
             <ImageView
                 android:id="@+id/image4"
@@ -70,8 +84,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="3dp"
                 android:layout_weight="1"
-                android:scaleType="centerCrop"
-                 />
+                android:scaleType="centerCrop" />
         </LinearLayout>
 
         <TextView
@@ -85,6 +98,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -92,7 +106,6 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/edittext_layout"
             android:gravity="start"
-            android:id="@+id/title"
             android:paddingHorizontal="5dp"
             android:paddingVertical="5dp"
             android:textColor="@color/black"
