--- a/app/src/main/res/layout/rv_event_layout.xml
+++ b/app/src/main/res/layout/rv_event_layout.xml
@@ -4,133 +4,170 @@
     android:id="@+id/cardEvent"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
-    android:background="@color/white"
-    android:padding="1dp">
+    android:layout_marginBottom="10dp"
+    android:background="@color/white">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:background="@drawable/bg_img_bday"
-        android:scaleType="centerCrop"
-        android:src="@drawable/img_birthday"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/imgCard">
 
-    <TextView
-        android:id="@+id/txtDate"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgCard">
+
+
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
+                android:text="20thJanuary 2022"
+                android:textColor="@color/txtGray"
+                android:textSize="10sp"
+                android:textStyle="normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txtEventName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:inputType="textMultiLine"
+                android:text="Birthday Party"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtDate" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="In Office"
+                android:textColor="@color/txtGray"
+                android:textSize="10sp"
+                android:textStyle="normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtEventName" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/txtEventName"
+                app:layout_constraintTop_toBottomOf="@+id/textView5">
+
+                <ImageView
+                    android:id="@+id/el1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ellipse_border"
+                    android:src="@drawable/img_user"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/el2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="-10dp"
+                    android:background="@drawable/ellipse_border"
+                    android:src="@drawable/img_user"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/el1"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/el3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="-10dp"
+                    android:background="@drawable/ellipse_border"
+                    android:src="@drawable/img_user"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/el2"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/el4"
+                    android:layout_width="32dp"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="-10dp"
+                    android:background="@drawable/bg_20"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="20+"
+                    android:textAlignment="gravity"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="@+id/el3"
+                    app:layout_constraintStart_toEndOf="@+id/el3"
+                    app:layout_constraintTop_toTopOf="@+id/el3" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/interested"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:background="@drawable/accept_btn_bg"
+                android:gravity="center_horizontal|center_vertical"
+                android:paddingHorizontal="7dp"
+                android:text="Interested"
+                android:textAlignment="gravity"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/cl2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/cl2"
+                app:layout_constraintTop_toTopOf="@+id/cl2" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/imgCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="20thJanuary 2022"
-        android:textColor="@color/txtGray"
-        android:textSize="10sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <TextView
-        android:id="@+id/txtEventName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:inputType="textMultiLine"
-        android:maxLength="25"
-        android:text="Birthday Party"
-        android:textColor="@color/black"
-        android:textSize="13sp"
-        android:textStyle="bold"
-
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/txtDate" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="In Office"
-        android:textColor="@color/txtGray"
-        android:textSize="10sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/txtEventName" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl2"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="2dp"
-        app:layout_constraintStart_toStartOf="@+id/txtEventName"
-        app:layout_constraintTop_toBottomOf="@+id/textView5">
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/el1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ellipse_border"
-            android:src="@drawable/img_user"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/imageView"
+            android:layout_width="155dp"
+            android:layout_height="110dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/eventimg"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <!--    android:background="@drawable/bg_img_bday"-->
+    </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:id="@+id/el2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="-10dp"
-            android:background="@drawable/ellipse_border"
-            android:src="@drawable/img_user"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/el1"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/el3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="-10dp"
-            android:background="@drawable/ellipse_border"
-            android:src="@drawable/img_user"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/el2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/el4"
-            android:layout_width="32dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="-10dp"
-            android:background="@drawable/bg_20"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="20+"
-            android:textAlignment="gravity"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/el3"
-            app:layout_constraintStart_toEndOf="@+id/el3"
-            app:layout_constraintTop_toTopOf="@+id/el3" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/interested"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:background="@drawable/accept_btn_bg"
-        android:gravity="center_horizontal|center_vertical"
-        android:paddingHorizontal="7dp"
-        android:text="Interested"
-        android:textAlignment="gravity"
-        android:textColor="@color/white"
-        android:textSize="10sp"
-        android:textStyle="normal"
-
-        app:layout_constraintBottom_toBottomOf="@+id/cl2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cl2"
-        app:layout_constraintTop_toTopOf="@+id/cl2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
